<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.loginbuddy.tools</groupId>
    <artifactId>tools</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>net.loginbuddy.tools.client-sdk</module>
        <module>sample</module>
    </modules>


    <name>Loginbuddy Tools</name>
    <description>This project provides tools to improve the usability of Loginbuddy</description>
    <url>https://loginbuddy.net</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

<!--    <scm>-->
<!--        <url>https://github.com/SaschaZeGerman/loginbuddy-tools/viewvc/maven</url>-->
<!--    </scm>-->

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.3.6</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
    </dependencies>
    
</project>